objects/BMCServiceDesk__BMC_IPConnectivitySubnet__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Address_Type__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>IPv4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPv6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Exploration_Date__c</fullName>
        <label>Exploration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Prefix_Length__c</fullName>
        <label>Prefix Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Subnet_Mask__c</fullName>
        <label>Subnet Mask</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Subnet_Number__c</fullName>
        <label>Subnet Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>